# moexapi

./: .gitignore  LICENSE  README.md  pyproject.toml  tests.py  upload.sh
moexapi/: __init__.py  boards.py  bonds.py  candles.py  changeover.py  dividends.py  exchange.py  history.py  markets.py  splits.py  tickers.py  utils.py
pymoex/: __init__.py  boards.py  bonds.py  candles.py  changeover.py  markets.py  tickers.py  utils.py
